# SphinxBasics

./: .SphinxBasics.code-workspace  .bandit.yaml  .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  serenity.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  serenity.doctree
.github/workflows/: sphinx.yml
_sources/: serenity.rst.txt
docs/: conf.py  index.rst  movie.rst  serenity.rst  welcome.rst
docs/source/: conf.py  index.rst
serenity/: README.rst  __init__.py  actions.py  ship.py
serenity/docs/: Makefile  conf.py  make.bat  movie.rst
serenity/docs/_build/doctrees/: environment.pickle  index.doctree  movie.doctree  serenity.doctree
serenity/docs/_build/html/: .buildinfo  genindex.html  index.html  movie.html  objects.inv  py-modindex.html  search.html  searchindex.js  serenity.html
serenity/docs/_build/html/_modules/: index.html
serenity/docs/_build/html/_modules/serenity/: actions.html  ship.html
serenity/docs/_build/html/_sources/: index.rst.txt  serenity.rst.txt
serenity/docs/_build/html/_static/: documentation_options.js
serenity/src/serenity/: __init__.py  actions.py  ship.py
