[tool.poetry]

name = "serenity"

version = "0.1.7"

description = "Documenting Python Projects With Sphinx and Read the Docs"

license = "MIT"

authors = ["sandmanscanga <59103444+sandmanscanga@users.noreply.github.com>"]

packages = [{ include = "serenity", from = "serenity/src" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
blacken-docs = "*"
bumpversion = "*"
colorama = "*"
colorlog = "*"
ipdb = "*"
ipython = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
python-dotenv = "*"
rich = "*"
psutil = "*"
notebook = "*"
gitpython = "*"

[tool.poetry.group.test.dependencies]
coverage = "*"
pygments-pytest = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-cov = "*"
pytest-emoji = "*"
pytest-logdog = "*"
pytest-menu = "*"
pytest-mock = "*"
pytest-pretty = "*"
pytest-sorter = "*"
pytest-threadleak = "*"

[tool.poetry.group.doc.dependencies]
click-man = "*"
doc-utils = "*"
meta-sphinx = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
pdoc3 = "*"
pydocstyle = "*"
sphinx = "*"
sphinx-autodoc-annotation = "*"
sphinx-autodoc-typehints = "*"
sphinx-multi-theme = "*"
sphinx-rtd-theme = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
